fixed wrapping exiting header box, fixed input not pairing with search p when wrapping

--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     font-family: playPretend;
     src: url(fonts/Play_Pretend.otf);
 }
-
+/* 
 @media only screen and (max-width: 600px) {
     header p#search {flex-wrap: wrap;}
     header #search-input {flex-wrap: wrap;}
-}
+} */
 
 * {
     margin: 0;
@@ -19,10 +19,11 @@
 header {
     padding: 1rem;
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
     position: sticky;
     background-color: black;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 1rem;
     background-image: url('imgs/theme.jpg');
@@ -34,7 +35,12 @@ header h1 {
 }
 
 header img {
-    height: 80%;
+    height: 80px;
+}
+
+header span#search-wrapper > * {
+    /* display: flex; */
+    display: inline-block;
 }
 
 header p#search {
